test_suite/tests/ui/string/validate/regex_feature.rs
use nutype::nutype;

#[nutype(validate(regex = "^[0-9]{3}-[0-9]{3}$"))]
struct PhoneNumber(String);

fn main() {}
